zerobus-ffi/zerobus.h

typedef struct CResult {
  bool success;
  char *error_message;
  bool is_retryable;
} CResult;
/**
 * A single header key-value pair for C FFI
 */
typedef struct CHeader {
  char *key;
  char *value;
} CHeader;
/**
 * A collection of headers returned from Go callback
 */
typedef struct CHeaders {
  struct CHeader *headers;
  uintptr_t count;
  char *error_message;
} CHeaders;
/**
 * Callback invoked when an async void operation (e.g. wait_for_offset) completes.
 * `result` is valid only for the duration of the callback; do not store the pointer.
 * The caller must NOT free `result->error_message`; Rust frees it after the callback returns.
 */
typedef void (*VoidOperationCallback)(void *user_data, const struct CResult *result);
typedef struct CZerobusStream {
  uint8_t _private[0];
} CZerobusStream;
typedef struct CStreamConfigurationOptions {
  uintptr_t max_inflight_requests;
  bool recovery;
  uint64_t recovery_timeout_ms;
  uint64_t recovery_backoff_ms;
  uint32_t recovery_retries;
  uint64_t server_lack_of_ack_timeout_ms;
  uint64_t flush_timeout_ms;
  int32_t record_type;
  uint64_t stream_paused_max_wait_time_ms;
  bool has_stream_paused_max_wait_time_ms;
  uint64_t callback_max_wait_time_ms;
  bool has_callback_max_wait_time_ms;
} CStreamConfigurationOptions;
/**
 * Represents a single record (either Proto or JSON)
 */
typedef struct CRecord {
  bool is_json;
  uint8_t *data;
  uintptr_t data_len;
} CRecord;
/**
 * Represents an array of records
 */
typedef struct CRecordArray {
  struct CRecord *records;
  uintptr_t len;
} CRecordArray;
/**
 * Free headers returned from callback
 */
void zerobus_free_headers(struct CHeaders headers);
/**
 * Wait for a specific offset to be acknowledged by the server
 */
bool zerobus_stream_wait_for_offset(struct CZerobusStream *stream,
                                    int64_t offset,
                                    struct CResult *result);
/**
 * Wait for a specific offset to be acknowledged by the server asynchronously.
 *
 * Identical to `zerobus_stream_wait_for_offset` but non-blocking: returns immediately and
 * invokes `callback` on a Tokio runtime thread when the operation completes.
 *
 * The caller must ensure `stream` remains valid until `callback` is invoked.
 */
void zerobus_stream_wait_for_offset_async(struct CZerobusStream *stream,
                                          int64_t offset,
                                          VoidOperationCallback callback,
                                          void *user_data);
/**
 * Flush all pending records
 */
bool zerobus_stream_flush(struct CZerobusStream *stream, struct CResult *result);
/**
 * Flushes all pending records asynchronously.
 *
 * Identical to `zerobus_stream_flush` but non-blocking: returns immediately and
 * invokes `callback` on a Tokio runtime thread when the operation completes.
 *
 * The caller must ensure `stream` remains valid until `callback` is invoked.
 */
void zerobus_stream_flush_async(struct CZerobusStream *stream,
                                VoidOperationCallback callback,
                                void *user_data);
/**
 * Get unacknowledged records from a closed stream
 * Returns a CRecordArray that must be freed with zerobus_free_record_array
 */
struct CRecordArray zerobus_stream_get_unacked_records(struct CZerobusStream *stream,
                                                       struct CResult *result);
/**
 * Free a CRecordArray returned by zerobus_stream_get_unacked_records
 */
void zerobus_free_record_array(struct CRecordArray array);
/**
 * Close the stream gracefully
 */
bool zerobus_stream_close(struct CZerobusStream *stream, struct CResult *result);
/**
 * Close the stream gracefully asynchronously.
 *
 * Identical to `zerobus_stream_close` but non-blocking: returns immediately and
 * invokes `callback` on a Tokio runtime thread when the operation completes.
 *
 * The caller must ensure `stream` remains valid until `callback` is invoked.
 * After the callback fires the stream should be freed with `zerobus_stream_free`.
 */
void zerobus_stream_close_async(struct CZerobusStream *stream,
                                VoidOperationCallback callback,
                                void *user_data);
/**
 * Free error message string
 */
void zerobus_free_error_message(char *message);
/**
 * Get default stream configuration options
 */
struct CStreamConfigurationOptions zerobus_get_default_config(void);